# legal-assist-rag

./: .gitignore  README.md  main.py  pyproject.toml
data/: chunk_queries.py  dev.json  group_query.py  indian_penal_code.json  merge_json.py  retrieval_analytics.jsonl  test.json
notebooks/: category_seper_hybrid_deduplic.ipynb  milvus.ipynb
src/: main.py
src/chunking/: chunking.py
src/config/: settings.py
src/llm/: llm_client.py
src/nodes/: domain_routing_agent.py  retrieval_decision_agent.py
src/rag/: rag_graph.py  rag_pipeline.py
src/retriever/: adaptive_hybrid_retriever.py  analytics_dashboard.py  bm25_indexer.py  hybrid_fusion.py  query_analyzer.py  retriever.py  test_retriever.py
src/vector_store/: avail_collection.py  category_store.py  milvus_lite_store.py  milvus_store.py  test_milvus.py
